--- a/src/ui/src/i18n/lang/cn.json
+++ b/src/ui/src/i18n/lang/cn.json
@@ -1449,5 +1449,11 @@
     "请先选择操作对象": "请先选择操作对象",
     "账号": "账号",
     "模糊": "模糊",
-    "模板名称将作为实例化后的模块名": "模板名称将作为实例化后的模块名"
+    "模板名称将作为实例化后的模块名": "模板名称将作为实例化后的模块名",
+    "导入更新主机提示": "说明：导入编辑需要先导出需要修改的主机，并完成编辑修改后才能进行导入编辑操作",
+    "导入文件大小提示": "20M 以内的 xlsx 文件，仅支持直连区域的主机导入",
+    "导入文件拖拽提示": "将文件拖到此处或{clickUpload}",
+    "是否导入关联的模型实例": "是否导入关联的模型实例",
+    "数据导入中": "数据导入中，请稍等...",
+    "数据导入终止提示": "数据导入中，关闭不会终止导入任务"
 }
